--- a/node-app/package.json
+++ b/node-app/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "bootstrap": "^5.1.3",
     "express": "^4.17.1",
-    "jquery": "^3.6.0"
+    "jquery": "^3.6.0",
+    "mysql": "^2.18.1"
   }
 }
