--- a/node-app/package.json
+++ b/node-app/package.json
@@ -12,6 +12,7 @@
     "bootstrap": "^5.1.3",
     "express": "^4.17.1",
     "jquery": "^3.6.0",
-    "mysql": "^2.18.1"
+    "mysql": "^2.18.1",
+    "pug": "^3.0.2"
   }
 }
