--- a/node-app/package.json
+++ b/node-app/package.json
@@ -9,10 +9,14 @@
   "author": "Vinodh",
   "license": "ISC",
   "dependencies": {
+    "bcrypt-nodejs": "0.0.3",
     "bootstrap": "^5.1.3",
     "express": "^4.17.1",
     "jquery": "^3.6.0",
+    "jsonwebtoken": "^8.5.1",
     "mysql": "^2.18.1",
+    "passport": "^0.5.0",
+    "passport-jwt": "^4.0.0",
     "pug": "^3.0.2"
   }
 }
